--- a/kd323b_nyman_a_assignment5/res/layout/notification_custom_remote.xml
+++ b/kd323b_nyman_a_assignment5/res/layout/notification_custom_remote.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical" >
 
     <ImageView
-        android:id="@+id/ImageView1"
+        android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_margin="@dimen/activity_horizontal_margin"
-        android:layout_toRightOf="@+id/ImageView1"
+        android:layout_toRightOf="@+id/imageView"
         android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
@@ -36,7 +36,7 @@
         android:id="@+id/notification_custon_remote_when"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/ImageView1"
+        android:layout_alignBottom="@+id/imageView"
         android:layout_alignLeft="@+id/notification_custom_remote_content"
         android:text="Small Text"
         android:textAppearance="?android:attr/textAppearanceSmall" />
